--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
         "http-status": "^0.2.5",
-        "mongodb": "^2.2.29",
+        "mongodb": "^2.2.30",
+        "morgan": "^1.8.2",
         "node-uuid": "^1.4.8",
         "path": "^0.12.7",
         "request": "^2.81.0",
