--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
         "http-status": "^0.2.5",
+        "jwt-simple": "^0.5.1",
         "mongodb": "^2.2.30",
         "morgan": "^1.8.2",
         "node-uuid": "^1.4.8",
+        "passport": "^0.3.2",
+        "passport-jwt": "^2.2.1",
         "path": "^0.12.7",
         "request": "^2.81.0",
         "request-promise": "^4.2.1",
