--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "request": "^2.81.0",
         "request-promise": "^4.2.1",
         "sequelize": "^3.30.4",
+        "source-map-support": "^0.4.15",
         "sqlite3": "^3.1.8",
         "winston": "^2.3.1"
     },
