--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "main": "index.js",
     "scripts": {
         "start": "babel-node index.js",
-        "test": "npm run test-unit && npm run test-integration && npm run test-contracts && npm run test-coverage",
-        "test-integration": "mocha --opts test/integration/mocha.opts test/integration/**/*.js",
-        "test-unit": "mocha --opts test/unit/mocha.opts test/unit/**/*.js",
-        "test-contracts": "mocha --opts test/contracts/mocha.opts test/contracts/**/*.js",
+        "test": "npm run test-unit && npm run test-integration && npm run test-contracts",
+        "test-integration": "npx mocha --opts test/integration/mocha.opts test/integration/**/*.js",
+        "test-unit": "npx mocha --opts test/unit/mocha.opts test/unit/**/*.js",
+        "test-contracts": "npx mocha --opts test/contracts/mocha.opts test/contracts/**/*.js",
         "lint": "eslint '**/*.js'",
         "lint:fix": "eslint '**/*.js' --fix",
-        "test-coverage": "nyc mocha --opts test/contracts/mocha.opts"
+        "test-coverage": "npx nyc npm test"
     },
     "author": "",
     "license": "ISC",
@@ -52,6 +52,7 @@
         "joi": "^9.2.0",
         "joi-assert": "0.0.3",
         "mocha": "^3.4.2",
+        "nyc": "^11.6.0",
         "supertest": "^2.0.1",
         "testdouble": "^1.11.2"
     }
