--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "babel-node index.js",
+        "start": "node index.js",
         "test": "npm run test-unit && npm run test-integration && npm run test-contracts",
         "test-integration": "npx mocha --opts test/integration/mocha.opts test/integration/**/*.js",
         "test-unit": "npx mocha --opts test/unit/mocha.opts test/unit/**/*.js",
