--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
     "license": "ISC",
     "dependencies": {
         "async": "^2.5.0",
-        "babel": "^6.23.0",
-        "babel-core": "^6.25.0",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-es2015": "^6.24.1",
         "bcrypt": "^0.8.7",
         "body-parser": "^1.17.2",
         "express": "^4.15.3",
+        "express-load": "^1.1.16",
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
         "http-status": "^0.2.5",
@@ -42,7 +39,6 @@
         "winston": "^2.3.1"
     },
     "devDependencies": {
-        "babel-cli": "^6.24.1",
         "chai": "^3.5.0",
         "eslint": "^3.19.0",
         "eslint-config-airbnb": "^12.0.0",
