--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "async": "^2.5.0",
         "bcrypt": "^0.8.7",
         "body-parser": "^1.17.2",
+        "consign": "^0.1.6",
         "express": "^4.15.3",
-        "express-load": "^1.1.16",
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
         "http-status": "^0.2.5",
