--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "async": "^2.5.0",
         "bcrypt": "^0.8.7",
         "body-parser": "^1.17.2",
-        "consign": "^0.1.6",
         "express": "^4.15.3",
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
@@ -36,6 +35,7 @@
         "sequelize": "^3.30.4",
         "source-map-support": "^0.4.15",
         "sqlite3": "^3.1.8",
+        "throng": "^4.0.0",
         "winston": "^2.3.1"
     },
     "devDependencies": {
