--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "async": "^2.5.0",
         "bcrypt": "^0.8.7",
         "body-parser": "^1.17.2",
+        "consign": "^0.1.6",
         "express": "^4.15.3",
         "form-data": "^2.2.0",
         "har-validator": "^5.0.3",
